--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@polkadot/extension-dapp": "^0.35.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-material": "^1.0.0-beta-15"
+    "vue-material": "^1.0.0-beta-15",
+    "vue-material-slider": "^2.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
