--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@polkadot/extension-dapp": "^0.35.1",
     "@polkadot/types": "^3.0.1",
     "@polkadot/util-crypto": "^5.0.1",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-material": "^1.0.0-beta-15",
-    "vue-material-slider": "^2.0.2"
+    "vue-material-slider": "^2.0.2",
+    "vue-router": "^3.4.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
