--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@polkadot/extension-dapp": "^0.35.1",
     "@polkadot/types": "^3.0.1",
     "@polkadot/util-crypto": "^5.0.1",
+    "apexcharts": "^3.25.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-apexcharts": "^1.6.0",
     "vue-material": "^1.0.0-beta-15",
     "vue-material-slider": "^2.0.2",
     "vue-router": "^3.4.9"
