--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@polkadot/api": "^3.0.1",
-    "@polkadot/extension-dapp": "^0.35.1",
-    "@polkadot/types": "^3.0.1",
-    "@polkadot/util-crypto": "^5.0.1",
+    "@polkadot/api": "^3.10.2",
+    "@polkadot/extension-dapp": "^0.37.1",
+    "@polkadot/types": "^3.10.2",
+    "@polkadot/util-crypto": "^5.8.1",
     "apexcharts": "^3.25.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
@@ -25,6 +25,7 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "anymatch": "^3.1.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
