--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@polkadot/extension-dapp": "^0.37.1",
     "@polkadot/types": "^3.10.2",
     "@polkadot/util-crypto": "^5.8.1",
+    "@polkadot/vue-identicon": "^0.70.1",
     "apexcharts": "^3.25.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.0",
+    "vue-clipboard2": "^0.3.1",
     "vue-material": "^1.0.0-beta-15",
     "vue-material-slider": "^2.0.2",
     "vue-router": "^3.4.9"
