--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-clipboard2": "^0.3.1",
     "vue-material": "^1.0.0-beta-15",
     "vue-material-slider": "^2.0.2",
+    "vue-mobile-detection": "^1.0.0",
     "vue-router": "^3.4.9"
   },
   "devDependencies": {
