--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "vue-clipboard2": "^0.3.1",
     "vue-material": "^1.0.0-beta-15",
     "vue-material-slider": "^2.0.2",
+    "vue-meta": "^2.4.0",
+    "vue-meta-info": "^0.1.7",
     "vue-mobile-detection": "^1.0.0",
     "vue-router": "^3.4.9"
   },
