--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "apexcharts": "^3.25.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.0",
     "vue-clipboard2": "^0.3.1",
