--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.0",
     "vue-clipboard2": "^0.3.1",
+    "vue-json-csv": "^1.2.12",
     "vue-material": "^1.0.0-beta-15",
     "vue-material-slider": "^2.0.2",
     "vue-meta": "^2.4.0",
